# base-fast-api

./: Makefile  README.md  pyproject.toml
deploy/: docker-compose.yml
deploy/configs/: excemple.config.toml
src/: config.py
src/infra/postgres/: provider.py  tables.py
src/infra/postgres/gateways/: base.py
src/infra/postgres/migration/versions/: 2025-07-25_new.py
src/main/: container.py  web.py
