[project]
name = "base-fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "LizaG000",email = "elizaveta.vladimirovna.g@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "dynaconf>=3.2.11",
    "fastapi>=0.116.1",
    "h11>=0.16.0",
    "idna>=3.10",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "python-stdnum>=2.1",
    "sniffio>=1.3.1",
    "starlette>=0.47.1",
    "typing-inspection>=0.4.1",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0"
]


[build-system]
build-backend = "poetry.core.masonry.api"
